@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: August 5, 2010</p>
+      <p>Last Updated: August 7, 2010</p>
     </td>
   </tr>
 </table>
@@ -1858,7 +1858,9 @@ nuttx-5.9 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
 	* examples/nsh/nsh_telnetd.c - Fix compilation errors that happen
 	  when both DHCPC and TELNETD are enabled in the Nuttshell.
-
+	* graphics/nxglib/fb/nxglib_moverectangle.c - Fix a logic error
+	  that caused an uninitialized variable warning.  I still don't 
+	  have a test to prove that the changes are correct.
 
 pascal-2.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
