@@ -25,8 +25,8 @@
       <li><a href="http://sourceforge.net/projects/nuttx/files/" target="_top">Downloads</a></li>
       <li><a href="http://sourceforge.net/projects/nuttx/files/buildroot" target="_top">Toolchains</a></li>
       <li><a href="http://nuttx.cvs.sourceforge.net/nuttx/" target="_top">Browse CVS</a></li>
-      <li><a href="freeports.html" target="header">Free Ports</a></li>
       <li><a href="http://dir.gmane.org/gmane.comp.embedded.nuttx" target="_top">gmane</a></li>
+      <li><a href="freeports.html" target="header">Free Ports</a></li>
     </td>
   </tr>
   <tr>
@@ -58,7 +58,7 @@
   </tr>
     <td>&nbsp</td>
     <td align="left" valign="top">
-      <a href="http://rss.groups.yahoo.com/group/nuttx/rss"><img src="rss.gif" border="0"></a></td>
+      <a href="http://rss.groups.yahoo.com/group/nuttx/rss" target="_top"><img src="rss.gif" border="0"></a></td>
   <tr>
   </tr>
 </table>
